# svk-xmp

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
arg_files/: metadata_sync_images.args
examples/: persistent_mode_example.py
src/svk_xmp/: __init__.py
src/svk_xmp/cli/: commands.py
src/svk_xmp/core/: exceptions.py  exiftool_wrapper.py  metadata_processor.py
src/svk_xmp/web/: app.py  routes.py
tests/: __init__.py  test_cli.py  test_core.py  test_web.py
