[project]
name = "svk-xmp"
version = "0.1.0"
description = "Metadata processing tool using exiftool"
readme = "README.md"
authors = [
    { name = "Henrik Vitalis", email = "henrik.vitalis@vitalibus.se" }
]
requires-python = ">=3.12"
dependencies = [
    "click>=8.2.1",
    "flask>=3.1.1",
    "requests>=2.32.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=22.0.0",
    "flake8>=4.0.0",
    "mypy>=0.991",
]

[project.scripts]
svk-xmp = "svk_xmp.cli.commands:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/svk_xmp"]

[tool.hatch.build]
include = [
    "src/svk_xmp/**/*.py",
    "arg_files/**/*",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "flake8>=7.3.0",
    "mypy>=1.17.0",
    "pytest>=8.4.1",
]
